--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^11.0.6",
+    "jspdf": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
